feat(ci):add api
